# ImageGenerator

./: .clang-format  .clang-tidy  .gitignore  AUDIT_cleanup.md  CLAUDE.md  CMakeLists.txt  README.md  backlog.md  config.json  hires_fix_plan.md  sdxl_hires_findings.md
assets/: guildmaster.desktop  icon.icns
assets/portraits/: README.md
assets/references/: wall_left.pgm
cmake/: copy_default_config.cmake  toolchain-mingw64.cmake
docs/00_overview/: architecture_summary.md  build_system.md  isometric_asset_pack_implementation_plan.md  system_overview.md
docs/10_pipeline/: cancellation.md  cfg_guidance.md  dtype_handling.md  gpu_fallback.md  pipeline_orchestration.md  scheduler.md  sdxl_specifics.md
docs/20_models/: adding_new_model.md  model_cache.md  model_loading.md
docs/30_lora/: lora_caching.md  lora_debugging.md  lora_key_format.md  lora_matching.md  lora_overview.md
docs/40_onnx/: external_data.md  onnx_indexing.md  onnx_parsing.md
docs/50_export/: export_overview.md  export_validation.md  sdxl_fp16_fixes.md
docs/55_import/: import_pipeline.md
docs/60_llm/: json_parsing.md  llm_overview.md  prompt_transform.md
docs/70_ui/: multiline_textarea.md  ui_architecture.md
docs/75_projects/: project_overview.md
docs/80_presets/: preset_overview.md
docs/85_prompt/: prompt_dsl.md
docs/90_debug/: common_failures.md  golden_harness.md  performance.md
docs/features/: auto_generate.md
resources/: app.rc
scripts/: AUDIT.md  build-windows.sh  check_lora_compat.py  compare.py  directMlCompatibiltyCheck.py  export_common.py  export_llm_onnx.py  export_onnx_models.py  export_vae_encoder.py  generate_icon.py  import_model.py  lora_check.py  onnx_check.py  ort_probe.py  patch_unet_resize.py  requirements_import.txt  sdxl_export_onnx_models.py  validate_dynamic_sdxl.py  verify_model.py
scripts/golden/: compare.py  golden_harness.sh
scripts/golden/goldens/: .gitignore
src/: app.cpp  app.hpp  main.cpp
src/assets/: AssetArtifactStore.cpp  AssetArtifactStore.hpp  AssetMetadata.hpp  AssetPostProcessor.cpp  AssetPostProcessor.hpp  CandidateScorer.cpp  CandidateScorer.hpp  GeneratedAssetProcessor.cpp  GeneratedAssetProcessor.hpp  ReferenceNormalizer.cpp  ReferenceNormalizer.hpp
src/config/: AppConfig.cpp  AppConfig.hpp  JsonFileIO.hpp
src/controllers/: CandidateRunPipeline.cpp  CandidateRunPipeline.hpp  GenerationService.cpp  GenerationService.hpp  ImageGeneratorController.cpp  ImageGeneratorController.hpp  MenuController.cpp  MenuController.hpp  ProjectController.cpp  ProjectController.hpp
src/enum/: constants.hpp  enums.hpp
src/headless/: GoldenRun.cpp  GoldenRun.hpp
src/import/: ImportedModelRegistry.cpp  ImportedModelRegistry.hpp  ModelImporter.cpp  ModelImporter.hpp  PythonEnvManager.cpp  PythonEnvManager.hpp  SafetensorsInspector.cpp  SafetensorsInspector.hpp  Subprocess.cpp  Subprocess.hpp
src/llm/: IPromptEnhancer.hpp  NullPromptEnhancer.hpp  OrtLlmEnhancer.cpp  OrtLlmEnhancer.hpp  PromptEnhancerFactory.hpp
src/managers/: Logger.cpp  Logger.hpp
src/portraits/: ClipTokenizer.cpp  ClipTokenizer.hpp  PortraitGeneratorAi.cpp  PortraitGeneratorAi.hpp  PromptBuilder.hpp
src/portraits/sd/: LoraInjector.cpp  LoraInjector.hpp  LoraMath.cpp  LoraParser.cpp  ModelManager.cpp  ModelManager.hpp  OnnxIndex.cpp  OnnxParser.cpp  OnnxPatcher.cpp  SdLoader.cpp  SdLoader.hpp  SdLoraApply.cpp  SdLoraApply.hpp  SdLoraMatch.cpp  SdLoraMatch.hpp  SdOnnxPatcher.cpp  SdOnnxPatcher.hpp  SdPipeline.cpp  SdPipeline.hpp  SdSafetensors.hpp  SdScheduler.cpp  SdScheduler.hpp  SdTextEncoder.cpp  SdTextEncoder.hpp  SdTypes.hpp  SdUNet.cpp  SdUNet.hpp  SdUtils.hpp  SdVae.cpp  SdVae.hpp
src/postprocess/: AlphaCutout.cpp  AlphaCutout.hpp  AssetValidator.cpp  AssetValidator.hpp
src/presenters/: ImageGeneratorPresenter.cpp  ImageGeneratorPresenter.hpp  MenuPresenter.cpp  MenuPresenter.hpp
src/presets/: Preset.hpp  PresetManager.cpp  PresetManager.hpp
src/projects/: AssetTypeTemplate.cpp  AssetTypeTemplate.hpp  PatronGenerator.cpp  PatronGenerator.hpp  Project.hpp  ProjectManager.cpp  ProjectManager.hpp
src/prompt/: Prompt.hpp  PromptCompiler.cpp  PromptCompiler.hpp  PromptJson.hpp  PromptMerge.cpp  PromptMerge.hpp  PromptParser.cpp  PromptParser.hpp
src/services/: CharacterAttributesService.cpp  CharacterAttributesService.hpp  CharacterService.cpp  CharacterService.hpp  GameService.cpp  GameService.hpp  GuildService.cpp  GuildService.hpp  PortraitGenerationService.cpp  PortraitGenerationService.h  QuestTemplateService.cpp  QuestTemplateService.hpp  utils.cpp  utils.hpp
src/services/Generators/: QuestTextGenerator.cpp  QuestTextGenerator.hpp
src/ui/: Buttons.cpp  Buttons.hpp  Helpers.cpp  Helpers.hpp  Logo.hpp  SliderTypes.hpp  Theme.cpp  Theme.h
src/ui/portraits/: PortraitGenerator.cpp  PortraitGenerator.hpp  PortraitLayer.cpp  PortraitLayer.hpp
src/ui/widgets/: ImportModelModal.cpp  ImportModelModal.hpp  LlmBar.cpp  LlmBar.hpp  MenuBar.cpp  MenuBar.hpp  MultiLineTextArea.cpp  MultiLineTextArea.hpp  ResultPanel.cpp  ResultPanel.hpp  SettingsModal.cpp  SettingsModal.hpp  SettingsPanel.cpp  SettingsPanel.hpp
src/ui/widgets/base/: Widget.h  WidgetController.h  WidgetEvent.h
src/views/: ImageGeneratorView.cpp  ImageGeneratorView.hpp  MenuView.cpp  MenuView.hpp  ProjectView.cpp  ProjectView.hpp  Screen.cpp  Screen.hpp
